[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyChatGPT"
version = "0.4.3.3"
authors = [
    { name="HimanshuJakhmola356", email="HimanshuJakhmola2000@gmail.com" },
]
description = "An unofficial Python wrapper for OpenAI's ChatGPT API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    'undetected-chromedriver >= 3.2.1',
    'markdownify >= 0.11.6'
]
